objects/Contact.object
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>TEXT(Account.Market__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthday__c</fullName>
        <label>Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <formula>TEXT(Account.Industry )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBA_Alumni__c</fullName>
        <label>MBA Alumni</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stanford</fullName>
                </value>
                <value>
                    <fullName>Harvard</fullName>
                </value>
                <value>
                    <fullName>Berkeley Haas</fullName>
                </value>
                <value>
                    <fullName>Wharton</fullName>
                </value>
                <value>
                    <fullName>Pepperdine</fullName>
                </value>
                <value>
                    <fullName>USC Marshall</fullName>
                </value>
                <value>
                    <fullName>UCLA Anderson</fullName>
                </value>
                <value>
                    <fullName>MIT</fullName>
                </value>
                <value>
                    <fullName>Chicago University Booth</fullName>
                </value>
                <value>
                    <fullName>Columbia</fullName>
                </value>
                <value>
                    <fullName>Northwestern Kellogg</fullName>
                </value>
                <value>
                    <fullName>University of Michigan Ross</fullName>
                </value>
                <value>
                    <fullName>Yale</fullName>
                </value>
                <value>
                    <fullName>Duke Fuqua</fullName>
                </value>
                <value>
                    <fullName>New York University Stern</fullName>
                </value>
                <value>
                    <fullName>Texas University McCombs</fullName>
                </value>
                <value>
                    <fullName>Boston University Questrom</fullName>
                </value>
                <value>
                    <fullName>Carnegie Mellon Tepper</fullName>
                </value>
                <value>
                    <fullName>University of Indiana Bloomington</fullName>
                </value>
                <value>
                    <fullName>Cornell Johnson</fullName>
                </value>
                <value>
                    <fullName>Dartmouth Tuck</fullName>
                </value>
                <value>
                    <fullName>Virgina University Darden</fullName>
                </value>
                <value>
                    <fullName>North Carolina University</fullName>
                </value>
                <value>
                    <fullName>Vanderbilt University Owen</fullName>
                </value>
                <value>
                    <fullName>Illinois University</fullName>
                </value>
                <value>
                    <fullName>Minnesota University Carlson</fullName>
                </value>
                <value>
                    <fullName>Michigan State</fullName>
                </value>
                <value>
                    <fullName>Georgetown McDonough</fullName>
                </value>
                <value>
                    <fullName>Washington University Foster</fullName>
                </value>
                <value>
                    <fullName>Texas A&amp;M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title_Level__c</fullName>
        <label>Title Level</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting Director</fullName>
                </value>
                <value>
                    <fullName>Accounting Manager</fullName>
                </value>
                <value>
                    <fullName>Accounts</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable Manager</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable Director</fullName>
                </value>
                <value>
                    <fullName>Business Analyst</fullName>
                </value>
                <value>
                    <fullName>Business Intelligence</fullName>
                </value>
                <value>
                    <fullName>Chief Accounting Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Financial Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Operations Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Data Scientist</fullName>
                </value>
                <value>
                    <fullName>Chief Digital Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Information Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Technology Officer</fullName>
                </value>
                <value>
                    <fullName>Controller</fullName>
                </value>
                <value>
                    <fullName>Data Scientist</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Finance Director</fullName>
                </value>
                <value>
                    <fullName>Finance Manager</fullName>
                </value>
                <value>
                    <fullName>Finance Systems Implementation</fullName>
                </value>
                <value>
                    <fullName>Financial Reporting VP</fullName>
                </value>
                <value>
                    <fullName>Internal Audit Director</fullName>
                </value>
                <value>
                    <fullName>Internal Audit Manager</fullName>
                </value>
                <value>
                    <fullName>Internal Auditor</fullName>
                </value>
                <value>
                    <fullName>Investor Relations</fullName>
                </value>
                <value>
                    <fullName>Mergers &amp; Acquisitions</fullName>
                </value>
                <value>
                    <fullName>Payroll Analyst</fullName>
                </value>
                <value>
                    <fullName>Payroll Manager</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Recruiter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Not DM</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Non-Target</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Status__c</fullName>
        <label>Email Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Do Not Send</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
                <value>
                    <fullName>Bounced/Invalid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Status__c</fullName>
        <label>Sales Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Prospect - Requested Services</fullName>
                </value>
                <value>
                    <fullName>Current Client</fullName>
                </value>
                <value>
                    <fullName>Prepare for Deletion</fullName>
                </value>
                <value>
                    <fullName>Prospect Partner</fullName>
                </value>
                <value>
                    <fullName>Former Client &lt; 2 yrs</fullName>
                </value>
                <value>
                    <fullName>Dormant Client &gt; 2yrs</fullName>
                </value>
                <value>
                    <fullName>Do Not Call</fullName>
                </value>
                <value>
                    <fullName>Pre-CFOD Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPA_Firm_Alum__c</fullName>
        <label>CPA Firm Alum</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>E&amp;Y</fullName>
                </value>
                <value>
                    <fullName>Deloitte</fullName>
                </value>
                <value>
                    <fullName>PWC</fullName>
                </value>
                <value>
                    <fullName>KPMG</fullName>
                </value>
                <value>
                    <fullName>Arthur &amp; Anderson</fullName>
                </value>
                <value>
                    <fullName>BDO</fullName>
                </value>
                <value>
                    <fullName>Grant Thornton</fullName>
                </value>
                <value>
                    <fullName>RSM/McGladrey</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City_Lives_In__c</fullName>
        <label>City Lives In</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Referred__c</fullName>
        <label>Date Referred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Linked_In_URL__c</fullName>
        <label>Linked In URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Person_Sourced__c</fullName>
        <label>Person Sourced</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Patrick Coggins</fullName>
                </value>
                <value>
                    <fullName>Rahul Merani</fullName>
                </value>
                <value>
                    <fullName>Lajja Shah</fullName>
                </value>
                <value>
                    <fullName>Jinu Philip</fullName>
                </value>
                <value>
                    <fullName>Tom Jacob</fullName>
                </value>
                <value>
                    <fullName>Sreepriya Sundaresan</fullName>
                </value>
                <value>
                    <fullName>Tracey Laubsted</fullName>
                </value>
                <value>
                    <fullName>External Referral</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Deidre Holguin</fullName>
                    <isActive>false</isActive>
                    <label>Deidre Holguin</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assistant_Email__c</fullName>
        <label>Assistant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Channel_Sourced__c</fullName>
        <label>Channel Sourced</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone Meeting</fullName>
                </value>
                <value>
                    <fullName>In Person Meeting</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Inbound Sales Call</fullName>
                </value>
                <value>
                    <fullName>Outbound Sales Call</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Linked In</fullName>
                </value>
                <value>
                    <fullName>Networking Event</fullName>
                </value>
                <value>
                    <fullName>BOD Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Audit</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Accounts Receivable</fullName>
                </value>
                <value>
                    <fullName>Financial Planning &amp; Analysis</fullName>
                </value>
                <value>
                    <fullName>Financial Reporting</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Business Intelligence/Financial Systems</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Mergers &amp; Acquisitions</fullName>
                </value>
                <value>
                    <fullName>Investor Relations</fullName>
                </value>
                <value>
                    <fullName>Payroll</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
                <value>
                    <fullName>Recruiting &amp; Sales</fullName>
                </value>
                <value>
                    <fullName>Royalties</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <label>Phone Extension</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Rating__c</fullName>
        <label>Priority Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Mid</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Children_s_Names__c</fullName>
        <label>Children&apos;s Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Favorite_Cuisine__c</fullName>
        <label>Favorite Cuisine</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>General_Comments__c</fullName>
        <label>General Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Main_Phone__c</fullName>
        <formula>Account.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Main Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Allocation__c</fullName>
        <label>Contact Allocation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Existing &lt; 2yrs</fullName>
                </value>
                <value>
                    <fullName>Existing &gt; 2yrs</fullName>
                </value>
                <value>
                    <fullName>Current Billing Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_Not_Call_Reason__c</fullName>
        <label>Do Not Call Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Do_Not_Send_Reason__c</fullName>
        <label>Do Not Send Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Significant_Others__c</fullName>
        <label>Significant Others</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Wedding_Anniversary__c</fullName>
        <label>Wedding Anniversary</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Favorite_Sports_Teams__c</fullName>
        <label>Favorite Sports Teams</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Externally_Referred_by__c</fullName>
        <label>Externally Referred by</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dietary_Restrictions_Allergies__c</fullName>
        <label>Dietary Restrictions / Allergies</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <validationRules>
        <fullName>Do_Not_Send_Reason</fullName>
        <active>true</active>
        <description>Make &quot;Do Not Send Reason&quot; Field a Required Dependency if &quot;Do Not Send&quot; value is selected in picklist for &quot;Email Status&quot;</description>
        <errorConditionFormula>AND(ISPICKVAL( Email_Status__c  , &apos;Do Not Send&apos;) , ISBLANK( Do_Not_Send_Reason__c   ) )</errorConditionFormula>
        <errorMessage>&quot;Do Not Send Reason&quot; Field is a Required if &quot;Do Not Send &quot; value is selected in picklist for &quot;Email Status&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Do_Not_call_reason</fullName>
        <active>true</active>
        <description>Make &quot;Do Not Call Reason&quot; Field a Required Dependency if &quot;Do Not Call&quot; value is selected in picklist for &quot;Sales Status&quot;</description>
        <errorConditionFormula>AND(ISPICKVAL( Sales_Status__c , &apos;Do Not Call&apos;) , ISBLANK( Do_Not_Call_Reason__c  ) )</errorConditionFormula>
        <errorMessage>&quot;Do Not Call Reason&quot; Field is a Required if &quot;Do Not Call&quot; value is selected in picklist for &quot;Sales Status&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_Referred_by_Field_is_required</fullName>
        <active>true</active>
        <description>When creating a new Contact, Add &quot;Date Referred&quot; Date Field next to &quot;Externally Referred by&quot; Field, make this field required if user selects: &quot;External Referral&quot; in the &quot;Person Sourced&quot; picklist</description>
        <errorConditionFormula>AND(ISPICKVAL(Person_Sourced__c, &apos;External Referral&apos;) , ISBLANK(Date_Referred__c) )</errorConditionFormula>
        <errorMessage>Date Referred Field is required if user selects: &quot;External Referral&quot; in the &quot;Person Sourced&quot; picklist</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Externally_Referred_by_a_Required_Field</fullName>
        <active>true</active>
        <description>When creating a new Contact, Make &quot;Externally Referred by&quot;a Required Field dependency IF User selects: &quot;External Referral&quot; in the picklist of &quot;Person Sourced&quot; Field</description>
        <errorConditionFormula>AND(ISPICKVAL(Person_Sourced__c, &apos;External Referral&apos;) , ISBLANK( Externally_Referred_by__c ) )</errorConditionFormula>
        <errorMessage>&quot;Externally Referred by&quot; is a Required Field dependency IF User selects: &quot;External Referral&quot; in the picklist of &quot;Person Sourced&quot; Field</errorMessage>
    </validationRules>
</CustomObject>